<resources>
    <string name="app_name">Evil Spin</string>
    <string name="action_settings">Settings</string>

    <string name="spin_button">Spin</string>
    <string name="add_button">Add</string>
    <string name="wheel_title_label">Wheel Title</string>
    <string name="default_wheel_title">Spin the wheel</string>
    <string name="color_palette_label">Color palette</string>
    <string name="color_palette_default">Default</string>
    <string name="color_palette_pastel">Pastel</string>
    <string name="wheel_speed">Wheel Speed</string>
    <string name="min_wheel_spin">Minimum Wheel Spin</string>
    <string name="background_label">Background</string>
    <string name="add_hint">it was faked…</string>

    // Untranslated colors for setBackgroundByName
    <string name="color_red_setting" translatable="false">red</string>
    <string name="color_orange_setting" translatable="false">orange</string>
    <string name="color_yellow_setting" translatable="false">yellow</string>
    <string name="color_green_setting" translatable="false">green</string>
    <string name="color_lime_setting" translatable="false">lime</string>
    <string name="color_turk_setting" translatable="false">turk</string>
    <string name="color_blue_setting" translatable="false">blue</string>
    <string name="color_indigo_setting" translatable="false">indigo</string>
    <string name="color_purple_setting" translatable="false">purple</string>
    <string name="color_grey_setting" translatable="false">grey</string>
    <string name="color_red">red</string>
    <string name="color_orange">orange</string>
    <string name="color_yellow">yellow</string>
    <string name="color_green">green</string>
    <string name="color_lime">lime</string>
    <string name="color_turk">turk</string>
    <string name="color_blue">blue</string>
    <string name="color_indigo">indigo</string>
    <string name="color_purple">purple</string>
    <string name="color_grey">grey</string>

    <string name="import_label">Import</string>
    <string name="export_label">Export</string>
    <string name="reset_wheel_label">RESET WHEEL</string>
    <string name="example_wheel_label">EXAMPLE WHEEL</string>
    <string name="example_name1">Teto</string>
    <string name="example_name2">Miku</string>
    <string name="example_name3">Gumi</string>
    <string name="example_name4">Rin</string>
    <string name="example_name5">Len</string>
    <string name="example_name6">Fukase</string>
    <string name="save_label">Save and exit</string>
    <string name="cancel_label">Cancel</string>

    <string name="result_title">Result</string>
    <string name="result_text">The wheel landed on:</string>
    <string name="result_ok">OK</string>

    <string name="toast_reset">Wheel reset to empty</string>
    <string name="toast_example">Example wheel has been set. Click save and exit.</string>
    <string name="toast_empty_spin">Please add options before spinning</string>
    <string name="toast_options_export">Options exported successfully</string>
    <string name="toast_options_write_error">Error writing file</string>
    <string name="toast_options_import">Options imported successfully</string>
    <string name="toast_options_read_error">Error reading file</string>

    <string name="options_button_content_description">Options</string>
</resources>