<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/titleEditText"
            android:text="@string/wheel_title_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/titleLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/colorPaletteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/color_palette_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleEditText" />

        <Spinner
            android:id="@+id/colorPaletteSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/colorPaletteLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/wheelSpeedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wheel_speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/colorPaletteSpinner" />

        <SeekBar
            android:id="@+id/wheelSpeedSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/wheelSpeedLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/minWheelSpinLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/min_wheel_spin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wheelSpeedSeekBar" />

        <SeekBar
            android:id="@+id/minWheelSpinSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/minWheelSpinLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/backgroundLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/background_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/minWheelSpinSeekBar" />

        <Spinner
            android:id="@+id/backgroundSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/backgroundLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/importButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/normal_buttom"
            android:text="@string/import_label"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@id/exportButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backgroundSpinner" />

        <Button
            android:id="@+id/exportButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:layout_marginTop="16dp"
            android:background="@drawable/normal_buttom"
            android:text="@string/export_label"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/importButton"
            app:layout_constraintTop_toBottomOf="@id/backgroundSpinner" />

        <Button
            android:id="@+id/resetWheelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/normal_buttom"
            android:text="@string/reset_wheel_label"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@id/defaultGermanNamesButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exportButton" />

        <Button
            android:id="@+id/defaultGermanNamesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/normal_buttom"
            android:text="@string/example_wheel_label"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/resetWheelButton"
            app:layout_constraintTop_toBottomOf="@id/exportButton" />

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/green_butt"
            android:text="@string/save_label"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"

            app:layout_constraintEnd_toStartOf="@id/cancelButton"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/defaultGermanNamesButton" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:layout_marginTop="16dp"
            android:background="@drawable/red_butt"
            android:text="@string/cancel_label"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/saveButton"
            app:layout_constraintTop_toBottomOf="@id/resetWheelButton" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>