<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_red"
    android:id="@+id/activity_main"
    >
    <TextView
        android:id="@+id/titlebar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/wheelView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsButton" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="0dp"
        android:contentDescription="@string/options_button_content_description"
        app:icon="@drawable/bootleg_settings"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="60dp"
        app:iconTint="#FFFFFF"
        app:cornerRadius="8dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:backgroundTint="#0072847E"
        app:rippleColor="#33FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <evil.spin.WheelView
        android:id="@+id/wheelView"
        android:layout_width="370dp"
        android:layout_height="370dp"
        app:layout_constraintTop_toBottomOf="@id/settingsButton"
        app:layout_constraintBottom_toTopOf="@id/spinButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/spinButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/normal_buttom_pres"
        android:text="@string/spin_button"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/optionInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/optionInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/add_hint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addOptionButton"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addOptionButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/normal_buttom"
        android:text="@string/add_button"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>